--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # suppress inspection "UnusedProperty" for whole file
 pluginId                         = net.rentalhost.plugins.hammer
 pluginName                       = hammer-tools
-pluginVersion                    = 0.2.1
+pluginVersion                    = 0.3.0
 
-pluginBuildSince                 = 221
-pluginBuildUntil                 = 222.*
+pluginBuildSince                 = 223
+pluginBuildUntil                 = 223.*
 
-platformVersion                  = 2022.2
-platformPhpBuild                 = 222.3345.135
+platformVersion                  = 223-EAP-SNAPSHOT
+platformPhpBuild                 = 223.4884.75
 
 gradleVersion                    = 7.5.1
 
