--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # suppress inspection "UnusedProperty" for whole file
 pluginId                         = net.rentalhost.plugins.hammer
 pluginName                       = hammer-tools
-pluginVersion                    = 0.3.5
+pluginVersion                    = 0.3.6
 
 pluginBuildSince                 = 223
 pluginBuildUntil                 = 223.*
 
-platformVersion                  = 223-EAP-SNAPSHOT
-platformPhpBuild                 = 223.7126.9
+platformVersion                  = 2022.3.1
+platformPhpBuild                 = 223.8214.52
 
-gradleVersion                    = 7.5.1
+gradleVersion                    = 7.6
 
 kotlin.stdlib.default.dependency = false
