--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # suppress inspection "UnusedProperty" for whole file
 pluginId                         = net.rentalhost.plugins.hammer
 pluginName                       = hammer-tools
-pluginVersion                    = 0.3.6
+pluginVersion                    = 0.3.7
 
 pluginBuildSince                 = 223
-pluginBuildUntil                 = 223.*
+pluginBuildUntil                 = 231.*
 
-platformVersion                  = 2022.3.1
-platformPhpBuild                 = 223.8214.52
+platformVersion                  = 231-EAP-SNAPSHOT
+platformPhpBuild                 = 231.4840.387
 
 gradleVersion                    = 7.6
 
